add auth register

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "./node_modules/.bin/gulp watch",
     "test": "./node_modules/.bin/lab test",
     "test:coverage": "./node_modules/.bin/lab -r html -o test/coverage.html test",
-    "test:watch": "./node_modules/.bin/fsmonitor -s -p '+*.js' npm run test:console"
+    "test:watch": "./node_modules/.bin/fsmonitor -s -p '+*.js' npm run test"
   },
   "dependencies": {
     "boom": "^3.1.2",
