--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tpl-info",
+  "name": "happy",
   "version": "0.0.2",
   "scripts": {
     "start": "node src/server.js",
@@ -10,6 +10,7 @@
     "test:watch": "./node_modules/.bin/fsmonitor -s -p '+*.js' npm run test"
   },
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "boom": "^3.1.2",
     "chalk": "^1.1.3",
     "dotenv": "^2.0.0",
