--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "happy",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "url": "https://github.com/Phonbopit/happy",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
