--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "boom": "^3.1.2",
     "chalk": "^1.1.3",
     "dotenv": "^2.0.0",
+    "good": "^6.6.3",
+    "good-console": "^5.3.0",
     "hapi": "^13.3.0",
     "hapi-auth-jwt2": "^6.0.0",
     "joi": "^8.0.5",
