--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: node_js
-services: mongodb
 node_js:
   - "4.2.4"
   - "5"
+os:
+  - linux
+  - macosx
+  - windows
+services: mongodb
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++4.8
+      - clang
