--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: node_js
 node_js:
   - "4.2.4"
   - "5"
-os:
-  - linux
-  - macosx
-  - windows
 services: mongodb
+env:
+  - CXX=g++4.8
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gcc-4.8
       - g++4.8
-      - clang
+branches:
+  only:
+    - master
